--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
     justify-content: center;
     flex-direction: column;
     background: radial-gradient(white, antiquewhite, rgb(248, 217, 176));
-    /* background: radial-gradient(white, rgb(224 215 78)) */
+}
+#intro > h1, h2, h3, h4 {
+    text-align: center;
 }
 
 body {
@@ -20,6 +22,6 @@ img#profileImg {
     border-radius: 150px;
     width: 300px;
     height: 300px;
-    padding: 10px;
-    margin: 50px;
+    padding-bottom: 10px;
+    margin-bottom: 50px;
 }
