--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+/* @import url(timeline/css/demo.css);
+@import url(timeline/css/timeliner.css);
+@import url(timeline/css/responsive.css);
+@import url(timeline/inc/colorbox.css); */
+@import 'https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css';
+@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css';
+
+:root {
+    --button-color: #f44336;
+    --font-family: Comic Sans MS
+}
+
 ::-webkit-scrollbar {
     width: 0px;
 }
@@ -16,6 +28,22 @@ h2,
 h3,
 h4 {
     text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span {
+    font-family: var(--font-family), Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+h1 {
+    color: var(--button-color);
 }
 
 body {
@@ -37,25 +65,31 @@ img.smallImg {
 
 img.profileImg {
     border-radius: 150px;
+    object-fit: cover;
+    object-position: 80%;
 }
 
 .button {
     display: inline-block;
-    color: #f44336;
+    color: var(--button-color);
     background-color: #FFFFFF;
-    border: 1px solid #f44336;
+    border: 1px solid var(--button-color);
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    margin: 20px;
+    margin: 20px 5px;
     opacity: 0.9;
     border-radius: 10px;
 }
 
 .button:hover {
-    background-color: #f44336;
+    background-color: var(--button-color);
     color: #FFFFFF;
+}
+
+.button i {
+    font-size: 18px;
 }
 
 .logo {
@@ -135,11 +169,115 @@ img.profileImg {
 #header-menu>a {
     text-decoration: none;
     padding: 10px 20px;
-    color: #ae7129;
+    color: var(--button-color);
     border-radius: 25px;
 }
 
 #header-menu>a:hover {
-    background-color: #ae7129c4;
+    background-color: var(--button-color);
+    /* background-color: #ae7129c4; */
     color: #fff
 }
+
+.page {
+    width: 100vw;
+    height: 100vh;
+    padding-top: 86px;
+}
+
+/* --- Timeline Styles start --- */
+.timeline-container::before {
+    background: var(--button-color);
+    content: "";
+    display: block;
+    height: 4px;
+    left: -8px;
+    width: 14px;
+    position: relative;
+    top: -4px;
+}
+
+.timeline-container::after {
+    background: var(--button-color);
+    content: "";
+    display: block;
+    height: 4px;
+    left: -8px;
+    width: 14px;
+    position: relative;
+}
+
+.timeline-container {
+    border-left: 4px solid var(--button-color);
+    margin: 20px auto;
+    width: 900px;
+}
+
+.timeline-wrapper .timeline-time {
+    cursor: pointer;
+    font-size: 2.8em;
+    font-weight: 400;
+    margin: 0 0 30px 0;
+    padding: 0;
+}
+
+.timeline-wrapper .timeline-time span {
+    background-color: var(--button-color);
+    padding: 5px 25px;
+    border-radius: 5rem;
+    color: #f1f1f1;
+}
+
+.timeline-wrapper .timeline-time::before {
+    border-top: 4px solid var(--button-color);
+    content: "";
+    display: inline-block;
+    height: 4px;
+    margin-right: 0px;
+    vertical-align: middle;
+    width: 24px;
+}
+
+.timeline-wrapper {
+    clear: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 0 12px;
+    width: 900px;
+}
+
+.timeline-series dt::before {
+    border-top: 3px solid var(--button-color);
+    content: "";
+    display: inline-block;
+    height: 3px;
+    margin-right: 10px;
+    vertical-align: middle;
+    width: 10px;
+}
+
+.timeline-series dt {
+    clear: left;
+    font-size: 1.8em;
+    line-height: 1.2em;
+    margin: 0 0 12px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.timeline-event-content {
+    margin-left: 2rem;
+}
+
+.timeline-event-content h3 {
+    text-align: left;
+}
+
+.timeline-event a {
+    text-decoration: none;
+    color: darkslateblue !important;
+}
+
+/* --- Timeline styles end --- */
